fix: goose code block no longer wraps in safari

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -949,8 +949,7 @@ iframe {
 figure#goose-terminal {
   line-height: 1.1rem;
 
-  &[data-line] {
-    overflow-x: auto;
-    text-wrap: unset;
+  & pre > code > [data-line] {
+    text-wrap: nowrap;
   }
 }
